# msg-store

./: Cargo.toml  Dockerfile  README.md  build.sh  default.profraw  package-lock.json  package.json  run_source_cov.sh  test.sh
benches/: benches.rs  lib.rs
builds/armv7/: Dockerfile
builds/http-server/: Dockerfile  build.sh  docker-compose.yml  publish.sh
builds/http-server/armv7/: Dockerfile  docker-compose.yml
database-plugin/: Cargo.toml
database-plugin/src/: lib.rs
http-server-leveldb-filestorage/: Cargo.toml
http-server-leveldb-filestorage/src/: init.rs  main.rs
http-server-leveldb-filestorage/src/api/export/: mod.rs
http-server-leveldb-filestorage/src/api/group/: delete.rs  get.rs
http-server-leveldb-filestorage/src/api/group_defaults/: delete.rs  get.rs  post.rs
http-server-leveldb-filestorage/src/api/msg/: delete.rs  get.rs  post.rs
http-server-leveldb-filestorage/src/api/stats/: delete.rs  get.rs  put.rs
http-server-leveldb-filestorage/src/api/store/: get.rs  put.rs
in-memory-database-plugin/: Cargo.toml
in-memory-database-plugin/src/: lib.rs
js-clients/msg-store-http-client/: README.md  index.d.ts  index.js  package-lock.json  package.json
js-clients/msg-store-http-client/integration-tests/: files.js
js-clients/msg-store-http-client/tests/: index.spec.js
leveldb-plugin/: Cargo.toml
leveldb-plugin/src/: lib.rs
msg-store/: Cargo.toml  LICENCE  README.md  test.sh
msg-store-http-server/: Cargo.toml  README.md
msg-store-http-server-stresser/: Cargo.toml
msg-store-http-server-stresser/src/: main.rs
msg-store-http-server/src/: init.rs  main.rs
msg-store-http-server/src/api/export/: mod.rs
msg-store-http-server/src/api/group/: get.rs
msg-store-http-server/src/api/group_defaults/: post.rs
msg-store-http-server/src/api/msg/: delete.rs  get.rs
msg-store-http-server/src/api/stats/: put.rs
msg-store-http-server/src/api/store/: get.rs  put.rs
msg-store-uuid/: Cargo.toml
msg-store/src/: lib.rs
msg-store/src/api/group_defaults/: get.rs  set.rs
msg-store/src/api/msg/: add.rs  mod.rs  rm.rs
msg-store/src/api/stats/: get.rs  mod.rs  rm.rs  set.rs
msg-store/src/core/: mod.rs  store.rs
msg-store/src/database/: in_memory.rs  leveldb.rs
msg_store_database_in_memory_plugin/: Cargo.toml  LICENCE  README.md
msg_store_database_in_memory_plugin/src/: lib.rs
msg_store_database_leveldb_plugin/: Cargo.toml  README.md
msg_store_database_leveldb_plugin/src/: lib.rs
msg_store_database_plugin/: Cargo.toml  README.md
msg_store_server_api/: Cargo.toml  README.md
msg_store_server_api/src/: export.rs  lib.rs
msg_store_server_api/src/group/: get.rs  rm.rs
msg_store_server_api/src/group_defaults/: get.rs  mod.rs  rm.rs  set.rs
msg_store_server_api/src/msg/: add.rs  get.rs  mod.rs  rm.rs
msg_store_server_api/src/stats/: get.rs  rm.rs  set.rs
msg_store_server_api/src/store/: get.rs  mod.rs  set.rs
msg_store_uuid/: Cargo.toml  README.md
msg_store_uuid/src/: lib.rs
server-api/: Cargo.toml
server-api/src/: export.rs  file_storage.rs  lib.rs
server-api/src/group/: get.rs  rm.rs
server-api/src/group_defaults/: set.rs
server-api/src/msg/: add.rs  get.rs  mod.rs  rm.rs
server-api/src/stats/: rm.rs
server-api/src/store/: set.rs
src/: collection.rs  config.rs  db_bridge.rs  error.rs  errors.rs  lib.rs  mem.rs  msg_data.rs  store.rs  uuid.rs
src/api/: configuration.rs  export.rs  file_storage.rs  mod.rs
src/api/group/: get.rs  rm.rs
src/api/group_defaults/: get.rs  rm.rs  set.rs
src/api/msg/: add.rs  get.rs  mod.rs  rm.rs
src/api/stats/: get.rs  rm.rs  set.rs
src/api/store/: get.rs  set.rs
src/bridge/: leveldb.rs  mod.rs  sqlite.rs
src/core/: errors.rs  mem.rs  mod.rs  store.rs  uuid.rs
src/database/: in_memory.rs  leveldb.rs  mem.rs  mod.rs
tests/: lib.rs
