[package]
name = "msg-store"
version = "0.1.0"
authors = ["joshua"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
db-key = "0.0.5"
leveldb = "0.8.6"
serde = { version = "1.0.123", features = ["derive"] }

[dev-dependencies]
bencher = "0.1.5"
enum-as-inner = "0.3.3"
laboratory = "2"
tempdir = "0.3.7"

[[bench]]
name = "lib"
harness = false
