[package]
name = "msg-store"
version = "0.1.0"
authors = ["joshua"]
edition = "2018"

[dependencies]
bincode = { version = "1.3.3", optional = true }
db-key = { version = "0.0.5", optional = true }
leveldb = { version = "0.8.6", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = [ "mem" ]
mem = []
level = [ "bincode", "db-key", "leveldb", "serde" ]
