[package]
name = "msg-store"
version = "0.8.0"
description = "A fast and light-weight message store designed to work as a priority queue in low hardware equiped devices."
authors = ["joshua"]
edition = "2018"
license = "MIT"

[dependencies]
bincode = { version = "1.3.3" }
bytes = "1.1.0"
db-key = { version = "0.0.5" }
leveldb = { version = "0.8.6" }
serde = { version = "1.0", features = ["derive"] }