[package]
name = "database-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3" }
bytes = "1.1.0"
msg-store = { path = "../msg-store" }
msg-store-uuid = { path = "../msg-store-uuid" }