[package]
name = "http-server-leveldb-filestorage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-multipart = "0.3.0"
actix-web = "3"
actix-web-actors = "3"
bytes = "1.1.0"
clap = "2.33.3"
dirs = "1.0.4"
env_logger = "0.9.0"
futures = "0.3.19"
msg_store_database_in_memory_plugin = { path = "../msg_store_database_in_memory_plugin" }
msg_store_database_leveldb_plugin = { path = "../msg_store_database_leveldb_plugin" }
log = "0.4.14"
msg-store = { path = "../msg-store" }
msg_store_database_plugin = { path = "../msg_store_database_plugin" }
msg-store-uuid = { path = "../msg-store-uuid" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
server-api = { path = "../server-api" }