[package]
name = "msg-store-http-server-stresser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
num_cpus = "1.13.0"
rayon = "1.5.1"
tempdir = "0.3.7"