[package]
name = "msg-store-http-server"
version = "0.1.4"
edition = "2021"
authors = ["Joshua Enokson <enoksonprojects@protonmail.com>"]
license = "MIT"
repository = "https://github.com/msg-store/msg-store"
readme = "README.md"
keywords = ["msg-store"]
description = """
A http server that wraps the msg-store api to allow exposure to wider applications.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-multipart = "0.3.0"
actix-web = "3"
actix-web-actors = "3"
bytes = "1.1.0"
clap = "2.33.3"
dirs = "1.0.4"
env_logger = "0.9.0"
futures = "0.3.19"
log = "0.4.14"
msg-store = { path = "../msg-store", version = "0.9.1" }
msg_store_database_plugin = { path = "../msg_store_database_plugin", version = "0.1.0" }
msg_store_database_in_memory_plugin = { path = "../msg_store_database_in_memory_plugin", version = "0.1.0" }
msg_store_database_leveldb_plugin = { path = "../msg_store_database_leveldb_plugin", version = "0.1.0" }
msg_store_server_api = { path = "../msg_store_server_api", version = "0.1.1" }
msg_store_uuid = { path = "../msg_store_uuid", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
