[package]
name = "msg_store_database_leveldb_plugin"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Enokson <enoksonprojects@protonmail.com>"]
license = "MIT"
repository = "https://github.com/msg-store/msg-store"
readme = "README.md"
keywords = ["msg-store"]
description = """
A LevelDB plugin for the msg-store
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3" }
bytes = "1.1.0"
db-key = { version = "0.0.5" }
leveldb = { version = "0.8.6" }
msg-store = { path = "../msg-store" }
msg_store_database_plugin = { path = "../msg_store_database_plugin" }
msg_store_uuid = { path = "../msg_store_uuid" }
serde = { version = "1.0", features = ["derive"] }
