[package]
name = "msg_store_database_plugin"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Enokson <enoksonprojects@protonmail.com>"]
license = "MIT"
repository = "https://github.com/msg-store/msg-store"
readme = "README.md"
keywords = ["msg-store"]
description = """
A toolkit for making database plugins for the msg-store
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3" }
bytes = "1.1.0"
msg-store = { path = "../msg-store" }
msg_store_uuid = { path = "../msg_store_uuid" }