[package]
name = "msg_store_server_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
futures = "0.3.19"
msg_store_database_plugin = { path = "../msg_store_database_plugin" }
msg_store_database_in_memory_plugin = { path = "../msg_store_database_in_memory_plugin" }
msg_store_database_leveldb_plugin = { path = "../msg_store_database_leveldb_plugin" }
log = "0.4.14"
msg-store = { path = "../msg-store" }
msg_store_uuid = { path = "../msg_store_uuid" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rand = "0.8.5"
tempdir = "0.3.7"