[package]
name = "msg_store_server_api"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Enokson <enoksonprojects@protonmail.com>"]
license = "MIT"
repository = "https://github.com/msg-store/msg-store"
readme = "README.md"
keywords = ["msg-store"]
description = """
The backbone of the msg-store api that can be embedded into various server implementations
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
futures = "0.3.19"
log = "0.4.14"
msg-store = { path = "../msg-store", version = "0.9.0" }
msg_store_database_plugin = { path = "../msg_store_database_plugin", version = "0.1.0" }
msg_store_database_in_memory_plugin = { path = "../msg_store_database_in_memory_plugin", version = "0.1.0" }
msg_store_database_leveldb_plugin = { path = "../msg_store_database_leveldb_plugin", version = "0.1.0" }
msg_store_uuid = { path = "../msg_store_uuid", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rand = "0.8.5"
tempdir = "0.3.7"