[package]
name = "server-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
database-plugin = { path = "../database-plugin" }
futures = "0.3.19"
in-memory-database-plugin = { path = "../in-memory-database-plugin" }
leveldb-plugin = { path = "../leveldb-plugin" }
log = "0.4.14"
msg-store = { path = "../msg-store" }
msg-store-uuid = { path = "../msg-store-uuid" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rand = "0.8.5"
tempdir = "0.3.7"